tests/error/comprehension_errors/guarded1.err
Guppy compilation failed. Error in file $FILE:13

11:    @guppy(module)
12:    def foo(qs: linst[tuple[bool, Qubit]]) -> linst[Qubit]:
13:        return [q for b, q in qs if b]
                            ^
GuppyTypeError: Variable `q` with linear type `Qubit` is not used on all control-flow paths of the list comprehension
